--- a/asset/style/responsive.css
+++ b/asset/style/responsive.css
@@ -142,11 +142,27 @@
         display: none;
     }
 
+    .quick-link {
+        margin: 0 20px 0 70px;
+    }
 
+    .category {
+        margin: 0 70px 0 20px;
+    }
 
 }
 
+@media screen and (max-width: 979px) {
+
+
+    .first {
+        margin: 0 auto 20px auto;
+        flex-wrap: wrap;
+    }
+}
+
 @media screen and (min-width: 825px) and (max-width: 979px) {
+
     .item-ipt:first-child {
         display: none;
     }
@@ -183,6 +199,51 @@
     .form-introduce h2 {
         font-family: var(--font-WorkSansMedium);
         font-weight: 500;
+    }
+
+
+
+    .about,
+    .quick-link,
+    .category,
+    .list-footer {
+        width: 50%;
+    }
+
+    .about,
+    .quick-link,
+    .category,
+    .form-footer,
+    .list-footer {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .quick-link,
+    .category {
+        margin: 0;
+    }
+
+    .category {
+        margin-top: 23px;
+    }
+
+    .list-footer {
+        flex-direction: row;
+        margin: 0 auto;
+    }
+
+
+    .form-footer {
+        padding: 10px;
+        margin: 20px 0;
+        width: 45%;
+    }
+
+    .form-footer form i {
+        bottom: 75px;
+        right: 115px;
     }
 
 }
@@ -316,9 +377,7 @@
     }
 
     .first {
-        margin: 0 auto;
         flex-direction: column;
-        flex-wrap: wrap;
     }
 
     .about,
@@ -346,7 +405,6 @@
 
     .form-footer {
         padding: 10px;
-        margin: 20px 0;
     }
 
     .form-footer form i {
