--- a/asset/style/media-screen.css
+++ b/asset/style/media-screen.css
@@ -61,7 +61,7 @@
 	}
 
 	.width-1200 {
-		width: 880px;
+		width: 100%;
 	}
 
 	.item-menu li a {
@@ -80,10 +80,6 @@
 		margin-left: 20px;
 	}
 
-	.form-introduce {
-		left: 100px;
-		padding: 20px;
-	}
 
 	.form-introduce h2 {
 		font-size: 26px;
@@ -114,14 +110,14 @@
 	}
 
 	.category {
-		padding: 0 40px;
+		padding: 0 25px;
 	}
 
 	.about,
 	.quick-link,
 	.category,
 	.list-footer {
-		width: 40%;
+		width: 38%;
 	}
 
 	.about,
@@ -166,7 +162,7 @@
 
 
 	.width-1200 {
-		width: 670px;
+		width: 100%;
 	}
 
 	.item-ipt:last-child {
@@ -174,17 +170,123 @@
 	}
 
 
-	.first {
-		flex-wrap: nowrap;
-		flex-direction: column;
+	.form-introduce {
+		padding: 20px;
+		bottom: 0;
+		transform: translate3d(30%, 45%, 10px);
+		left: 0;
 	}
 
 
 
 
+	.icon:focus .item-menu {
+		display: block;
+	}
+
+	.icon:focus .item-ipt {
+		display: block;
+	}
 
 
 
+
+	.last ul {
+		display: none;
+	}
+
+	.logo-footer {
+		margin-left: 20px;
+	}
+
+
+	.form-introduce h2 {
+		margin: 8px 0 12px 0;
+		font-size: 26px;
+	}
+
+
+
+
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+
+
+
+
+	.width-1200 {
+		width: 100%;
+	}
+
+
+
+	.form-introduce {
+		padding: 20px;
+		bottom: -100px;
+		left: 15px;
+	}
+
+
+
+	.form-introduce h2 {
+		font-size: 14px;
+		line-height: 20px;
+	}
+
+	.user span,
+	time,
+	.tag {
+		font-size: 14px;
+	}
+}
+
+/* Option follow device */
+@media (min-width: 1500px) {}
+
+@media (max-width: 991px) {}
+
+@media (min-width: 768px) {
+	.noPaddingLeft {
+		padding-left: 0;
+	}
+
+	.noPaddingRight {
+		padding-right: 0;
+	}
+
+	.noPadding {
+		padding: 0;
+	}
+}
+
+@media (max-width: 767px) {
+	nav {
+		flex: none;
+	}
+
+	.item-menu {
+		display: none;
+	}
+
+	header {
+		justify-content: space-between;
+	}
+
+	.item-ipt:first-child {
+		display: none;
+
+	}
+
+	.width-750 {
+		width: 80%;
+	}
+
+	.nav {
+		position: relative;
+		display: block;
+	}
 
 	.nav form .item-ipt {
 		display: none;
@@ -228,123 +330,30 @@
 		display: inline-block;
 	}
 
-
-
-	.icon:focus .item-menu {
-		display: block;
-	}
-
-	.icon:focus .item-ipt {
-		display: block;
-	}
-
-
-
-
-	.last ul {
-		display: none;
-	}
-
-	.logo-footer {
-		margin-left: 20px;
-	}
-
-	.form-introduce {
-		bottom: -80px;
-		padding: 10px;
-		left: 48px;
-	}
-
-	.form-introduce h2 {
-		margin: 8px 0 12px 0;
-		font-size: 26px;
-	}
-
-
-
-
-}
-
-/* Extra small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {
-
-
-
-
-	.width-1200 {
-		width: 500px;
-	}
-
-
-
-
-
-	.form-introduce {
-		padding: 22px;
-	}
-
-	.form-introduce h2 {
-		font-size: 16px;
-		line-height: 20px;
-	}
-
-	.user span,
-	time,
-	.tag {
-		font-size: 14px;
-	}
-}
-
-/* Option follow device */
-@media (min-width: 1500px) {}
-
-@media (max-width: 991px) {}
-
-@media (min-width: 768px) {
-	.noPaddingLeft {
-		padding-left: 0;
-	}
-
-	.noPaddingRight {
-		padding-right: 0;
-	}
-
-	.noPadding {
-		padding: 0;
-	}
-}
-
-@media (max-width: 767px) {
-	nav {
-		flex: none;
-		margin-left: 20px;
-	}
-
-	.item-menu {
-		display: none;
-	}
-
-	header {
-		justify-content: space-between;
-	}
-
-	.item-ipt:first-child {
-		display: none;
-
-	}
-
-
-
-	.nav {
-		position: relative;
-		display: block;
-	}
-
 	.icon {
 		display: block;
 		margin: 0 20px;
 		border-radius: 6px;
 	}
+
+	.user span,
+	time {
+		font-size: 12px;
+	}
+
+	.infor-user {
+		margin-bottom: 0;
+	}
+
+	.list-post {
+		margin-left: 70px;
+	}
+
+	.list-post h4 {
+		font-size: 20px;
+
+	}
+
 
 	.posts {
 
@@ -353,17 +362,16 @@
 
 
 	.post:nth-child(3n+1),
-	.post:nth-child(2n+1) {
-		margin-right: 0;
-	}
-
+	.post:nth-child(2n),
 	.post:nth-child(3n),
-	.post:nth-child(2n) {
+	.post:nth-child(2n+1) {
+		margin-left: 0;
 		margin-left: 0;
 	}
 
 	.post {
 		width: 70%;
+		margin: 10px 0;
 	}
 
 	.post:first-child {
@@ -371,8 +379,10 @@
 	}
 
 	.first {
+		flex-wrap: nowrap;
 		flex-direction: column;
 	}
+
 
 
 	.about,
@@ -387,6 +397,10 @@
 		text-align: center;
 	}
 
+	.list-footer {
+		flex-direction: row;
+	}
+
 	.quick-link,
 	.category {
 		padding: 10px 0 0 0;
@@ -396,15 +410,26 @@
 	.category ul {
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
 	}
 
+	.quick-link ul li,
+	.category ul li {
+		width: 30%;
+	}
 
 	.form-footer {
 		padding: 10px;
+		margin-top: 18px;
 	}
 
 	.form-footer form i {
 		bottom: 75px;
+		right: 50px;
+	}
+
+	.last {
+		justify-content: center;
 	}
 
 	.last ul {
